--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -101,7 +101,10 @@
         -->
         <div class="inner-block ">
           <article class="main-content">
-            <h2>Contact the admin team if you need help with your application.</h2>
+            <h2>GRC service is currently undergoing maintenance.</h2>
+            <br>
+            <h3>Contact the admin team if you need help with your application.</h3>
+            <br>
             <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
               GRPenquiries@justice.gov.uk
             </a><br>
